--- a/themes/wilks/theme.toml
+++ b/themes/wilks/theme.toml
@@ -4,7 +4,7 @@
 name = "Wilks"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE.md"
-description = ""
+description = "Tom Wilks is a Manchester based Web Developer specialising in Front End and Drupal development."
 homepage = "https://wilks.co/"
 tags = []
 features = []
