--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,10 @@
 baseURL = "/"
 languageCode = "en"
 title = "Tom Wilks - Web Developer from Manchester"
+description = "Tom Wilks is a Manchester based Web Developer specialising in Front End and Drupal development."
 theme = "wilks"
+[params]
+     Description = "Tom Wilks is a Manchester based Web Developer specialising in Front End and Drupal development."
 [menu]
   [[menu.main]]
     identifier = "about"
