--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ description = "Tom Wilks is a Manchester based Web Developer specialising in Fro
 theme = "wilks"
 [params]
      Description = "Tom Wilks is a Manchester based Web Developer specialising in Front End and Drupal development."
+     theme = ""
 [menu]
   [[menu.main]]
     identifier = "about"
