--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
 baseURL = "https://wilks.co"
 languageCode = "en"
-title = "Tom Wilks - Web Developer from Manchester"
-description = "Tom Wilks is a Manchester based Web Developer specialising in Front End and Drupal development."
+description = "Tom Wilks is a Manchester based front-end web developer specialising in Drupal and modern web technologies."
 theme = "wilks"
 [params]
-     Description = "Tom Wilks is a Manchester based Web Developer specialising in Front End and Drupal development."
-     theme = ""
+  Title = "Tom Wilks - Front-end Web Developer from Manchester"
+  Description = "Tom Wilks is a Manchester based front-end web developer specialising in Drupal and modern web technologies."
+  theme = ""
 [menu]
   [[menu.main]]
     identifier = "about"
