--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,23 @@ theme = "wilks"
   theme = ""
 [menu]
 [markup]
+  [markup.goldmark]
+    [markup.goldmark.extensions]
+      definitionList = true
+      footnote = true
+      linkify = true
+      strikethrough = true
+      table = true
+      taskList = true
+      typographer = true
+    [markup.goldmark.parser]
+      attribute = true
+      autoHeadingID = true
+      autoHeadingIDType = "github"
+    [markup.goldmark.renderer]
+      hardWraps = false
+      unsafe = true
+      xhtml = true
   [markup.highlight]
     codeFences = true
     guessSyntax = true
